<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cessna"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.esiea.praddaude.aura.CessnaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cessna_1"
                android:id="@+id/imageView7"
                android:layout_marginTop="21dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="30dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="@string/cessna_msg_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_below="@+id/imageView7"
                android:layout_alignLeft="@+id/imageView7"
                android:layout_alignStart="@+id/imageView7"
                android:layout_alignRight="@+id/imageView7"
                android:layout_alignEnd="@+id/imageView7"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/cessna_2"
                android:id="@+id/imageView9"
                android:paddingTop="20dp"
                android:layout_height="117dp"
                android:paddingBottom="20dp" />

            <TextView
                android:text="@string/cessna_msg_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:paddingBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <Button
                android:text="@string/cessna_msg_3"
                android:layout_gravity="center_horizontal"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:elevation="1dp" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
