<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_avancement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="org.esiea.praddaude.aura.AvancementActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView37"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_news" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVmaj"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/tVperc"
        android:layout_toEndOf="@+id/tVperc"
        android:layout_alignBottom="@+id/button2"
        android:gravity="center_vertical"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>

    <TextView
        android:text="@string/avanc_msg_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView36"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/progressBar5"
        android:max="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/avanc_msg_4"
        android:layout_width="wrap_content"
        android:id="@+id/button2"
        android:onClick="services"
        android:layout_height="40dp"
        android:layout_below="@+id/tVperc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.Button" />

    <TextView
        android:text="@string/avanc_msg_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView37"
        android:textSize="18dp"
        android:layout_below="@+id/tVmaj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="0%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVperc"
        android:layout_below="@+id/progressBar5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
